<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhoneDialer</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings2">Settings</string>
    <string name="title_activity_country">CountryActivity</string>

    <!-- EditText hints -->
    <string name="hint_c">Country</string>
    <string name="hint_n">Phone number without first 0</string>

    <!-- Button text -->
    <string name="btn_country">Show Country</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_back">Back</string>
    <string name="btn_ocd">OCD</string>
    <string name="btn_call">Call</string>

    <!-- Misc -->
    <string name="country">Something is messed up!</string>
    <string name="numberph">Number</string>
    <string name="plus">+</string>
    <string name="phone_number">Enter phone number</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
